# anaLAIzer

./: .gitignore  README.md  pyproject.toml
notebooks/: classifier copy.ipynb  classifier.ipynb
src/analaizer/: etl.py
