[tool.poetry]
name = "analaizer"
version = "0.1.0"
description = "Ferramenta para prever negativas de acesso em pedidos de acesso à informação ao Governo Federal brasileiro."
authors = ["bcbernardo <bc.bernardo@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.0"
fasttext = {git = "https://github.com/facebookresearch/fastText.git"}
minilog = "^2.0.1"
notebook = "^6.4.0"
sklearn = "^0.0"
imbalanced-learn = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
