[tool.poetry]
name = "analaizer"
version = "0.1.0"
description = "Ferramenta para prever negativas de acesso em pedidos de acesso à informação ao Governo Federal brasileiro."
authors = ["bcbernardo <bc.bernardo@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.0"
fasttext = {git = "https://github.com/facebookresearch/fastText.git"}
minilog = "^2.0.1"
notebook = "^6.4.0"
sklearn = "^0.0"
imbalanced-learn = "^0.8.0"
scipy = ">=1.7.0"
spacy = "^3.1.1"
auto-sklearn = "^0.13.0"
pyarrow = "^5.0.0"
dask-ml = "^1.9.0"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
